[tool.poetry]
name = "torncoder"
version = "0.2.0"
description = "Basic tornado-based python utilities."
authors = ["Aaron Gibson <eulersidcrisis@yahoo.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/eulersIDcrisis/torncoder"
repository = "https://github.com/eulersIDcrisis/torncoder"

[tool.poetry.dependencies]
python = ">=3.8,<4"
tornado = "^6.1"
aiofiles = {version = "^22.1.0", extras = ["threaded"]}
aiofile = {version = "^3.8.1", extras = ["aio"]}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
coverage = "^6.5.0"
tox = "^3.26.0"

[tool.poetry.scripts]
torn-file-server = "torncoder.cli.fileserver:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
